Fixed overlapping buttons in the template container.

--- a/app/styles/style.less
+++ b/app/styles/style.less
@@ -35,6 +35,8 @@
   }
   &.dropdown-menu .close span:hover { background: none; }
 
+  &.dropdown-menu { padding: 35px 8px 8px; }
+
   .user-select(none);
   .border-radius(4px);
 
